Revision history for Signal-Unsafe

{{$NEXT}}

0.002     2014-08-20 00:26:52+02:00 Europe/Amsterdam
          Fix various portability issues

0.001     2014-08-16 14:17:36+02:00 Europe/Amsterdam
          - Initial release