@@ -1,6 +1,7 @@
 Revision history for Signal-Unsafe
 
 {{$NEXT}}
+          Fix leak when removing handler
 
 0.002     2014-08-20 00:26:52+02:00 Europe/Amsterdam
           Fix various portability issues
